# axio-agent

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  conf.py  conftest.py  getting-started.md  index.md  packages.md  pyproject.toml  quick-start.md
_static/: custom.css
axio/: README.md  pyproject.toml
axio-audio/: pyproject.toml
axio-audio/src/axio_audio/: __init__.py  duplex.py  microphone.py  speaker.py
axio-audio/tests/: test_microphone.py  test_speaker.py
axio-context-sqlite/: README.md  pyproject.toml
axio-context-sqlite/src/axio_context_sqlite/: __init__.py  store.py
axio-context-sqlite/tests/: test_autocompact_sqlite.py  test_store.py
axio-repl/: README.md  pyproject.toml
axio-repl/src/axio_repl/: __init__.py
axio-repl/tests/: conftest.py  test_system_prompt.py
axio-tools-docker/: README.md  conftest.py  pyproject.toml
axio-tools-docker/src/axio_tools_docker/: __init__.py  handler.py  plugin.py  sandbox.py  settings.py
axio-tools-docker/src/axio_tools_docker/tui/: __init__.py  docker.py
axio-tools-docker/tests/: test_handler.py  test_integration.py  test_sandbox.py
axio-tools-local/: README.md  pyproject.toml
axio-tools-local/src/axio_tools_local/: list_files.py  patch_file.py  read_file.py  run_python.py  shell.py  write_file.py
axio-tools-local/tests/: test_list_files.py  test_patch_file.py  test_read_file.py  test_run_python.py  test_shell.py  test_write_file.py
axio-tools-mcp/: README.md  pyproject.toml
axio-transport-anthropic/: README.md  pyproject.toml
axio-transport-anthropic/src/axio_transport_anthropic/: __init__.py
axio-transport-anthropic/src/axio_transport_anthropic/tui/: __init__.py  settings.py
axio-transport-anthropic/tests/: test_anthropic.py  test_transport.py
axio-transport-codex/: README.md  pyproject.toml
axio-transport-codex/src/axio_transport_codex/: __init__.py  settings.py  transport.py
axio-transport-codex/src/axio_transport_codex/tui/: __init__.py  settings.py
axio-transport-codex/tests/: test_transport.py
axio-transport-google/: README.md  pyproject.toml
axio-transport-google/scripts/: generate_types.py
axio-transport-google/src/axio_transport_google/: __init__.py  _generated_types.py  realtime.py  tools.py
axio-transport-google/src/axio_transport_google/tui/: __init__.py  google.py
axio-transport-google/tests/: test_generated_types.py  test_google.py  test_realtime.py
axio-transport-openai/: Makefile  README.md  pyproject.toml
axio-transport-openai/.github/workflows/: tests.yml
axio-transport-openai/src/axio_transport_openai/: __init__.py  custom.py  nebius.py  openrouter.py  realtime.py
axio-transport-openai/src/axio_transport_openai/tui/: __init__.py  custom.py  nebius.py  openai.py  openrouter.py
axio-transport-openai/tests/: conftest.py  test_custom.py  test_nebius.py  test_openai.py  test_openrouter.py  test_realtime.py  test_transport_retry.py
axio-tui/: README.md  pyproject.toml
axio-tui-guards/: README.md  pyproject.toml
axio-tui-guards/.github/workflows/: tests.yml
axio-tui-guards/src/axio_tui_guards/: dialogs.py  guards.py
axio-tui-guards/tests/: conftest.py  test_tui_guards.py
axio-tui-rag/: README.md  pyproject.toml
axio-tui/src/axio_tui/: app.py  plugin.py  prompt.py  screens.py  sqlite_config.py  tools.py  transport_registry.py
axio-tui/tests/: conftest.py  test_guard_screens.py  test_plugin.py  test_plugin_toggle.py  test_sqlite_config.py  test_tools.py  test_transport_registry.py
axio/src/axio/: __init__.py  agent.py  agent_loader.py  blocks.py  compaction.py  context.py  events.py  field.py  messages.py  models.py  permission.py  realtime.py  schema.py  selector.py  stream.py  testing.py  tool.py  tool_args.py  transport.py
axio/tests/: conftest.py  test_agent_branch.py  test_agent_capabilities.py  test_agent_loader.py  test_agent_permission.py  test_agent_run.py  test_agent_tools.py  test_blocks.py  test_compaction.py  test_context.py  test_events.py  test_exceptions.py  test_field.py  test_models.py  test_permission.py  test_realtime.py  test_schema.py  test_stream.py  test_tool.py  test_tool_args.py  test_transport.py  test_types.py
concepts/: agent.md  context.md  events.md  guards.md  index.md  models.md  plugins.md  protocols.md  tools.md
docs/: Makefile  README.md  api.md  conf.py  gas-town-rules.md  getting-started.md  glossary.md  index.md  packages.md  pyproject.toml  quick-start.md  troubleshooting.md
docs/concepts/: agent.md  context.md  events.md  field.md  guards.md  index.md  models.md  plugins.md  protocols.md  schema.md  selector.md  tool-args-streaming.md  tools.md
docs/guides/: agent-swarm.md  axio-repl.md  best-practices.md  cookbook.md  docker-sandbox.md  gas-town.md  google-transport.md  index.md  mcp-tools.md  multimodal.md  realtime-audio.md  testing.md  tui-usage.md  writing-context-stores.md  writing-guards.md  writing-tools.md  writing-transports.md
examples/: codex_chat.py  minimal.py  stream_tool_args.py
examples/agent_swarm/: pyproject.toml
examples/agent_swarm/agent_swarm/: __main__.py  ask_user.py  notes.py  swarm.py  todo.py
examples/agent_swarm/agent_swarm/roles/: __init__.py  architect.toml  backend_dev.toml  challenger.toml  designer.toml  etl_engineer.toml  frontend_dev.toml  project_manager.toml  qa.toml  security_engineer.toml  ux_engineer.toml
examples/agent_swarm/tests/: conftest.py  test_integration.py  test_notes.py  test_roles.py  test_swarm.py
examples/gas_town/: pyproject.toml
examples/gas_town/gas_town/: __main__.py  beads.py  swarm.py
examples/gas_town/gas_town/roles/: __init__.py  crew.toml  polecat.toml  refinery.toml  witness.toml
examples/gas_town/tests/: conftest.py  test_beads.py  test_integration.py  test_roles.py
examples/realtime_chat/: aec.py  aec_bench.py  chat.py  pyproject.toml  setup.py  webrtc_apm.cpp
examples/realtime_chat/tests/: test_chat.py
examples/realtime_smoke/: pyproject.toml  smoke.py
examples/realtime_smoke/tests/: test_smoke.py
guides/: index.md  testing.md  writing-guards.md  writing-tools.md  writing-transports.md
(+42 files in other folders)
