[project]
name = "axio-tools-mcp"
version = "0.2.3"
description = "MCP tools loader for Axio"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["llm", "agent", "ai", "mcp", "tools", "model-context-protocol"]
dependencies = ["axio", "mcp>=1.6"]

[project.entry-points."axio.tools.settings"]
mcp = "axio_tools_mcp.plugin:MCPPlugin"


[project.urls]
Homepage = "https://github.com/axio-agent/axio-tools-mcp"
Repository = "https://github.com/axio-agent/axio-tools-mcp"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/axio_tools_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 119
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
python_version = "3.12"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "mypy>=1.14",
    "ruff>=0.9",
    "pytest-cov>=7.1.0",
    "textual>=2.1.0",
]

