[project]
name = "axio-transport-nebius"
version = "0.2.3"
description = "Nebius AI Studio transport for Axio"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["llm", "agent", "ai", "nebius", "transport", "openai-compatible"]
dependencies = ["axio-transport-openai"]

[project.optional-dependencies]
tui = ["textual>=2.1.0"]

[project.entry-points."axio.transport"]
nebius = "axio_transport_nebius:NebiusTransport"

[project.entry-points."axio.transport.settings"]
nebius = "axio_transport_nebius:NebiusSettingsScreen"


[project.urls]
Homepage = "https://github.com/axio-agent/axio-transport-nebius"
Repository = "https://github.com/axio-agent/axio-transport-nebius"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src/axio_transport_nebius.py"]
sources = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 119
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
python_version = "3.12"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "mypy>=1.14",
    "ruff>=0.9",
    "pytest-cov>=7.1.0",
    "textual>=2.1.0",
]

