[project]
name = "axio-audio"
version = "0.1.0"
description = "Microphone and speaker helpers for Axio realtime agents"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["llm", "agent", "ai", "audio", "realtime", "sounddevice"]
dependencies = ["axio", "sounddevice>=0.5", "numpy>=2"]

[project.urls]
Homepage = "https://github.com/mosquito/axio-agent"
Repository = "https://github.com/mosquito/axio-agent"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/axio_audio"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 119
output-format = "concise"
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
python_version = "3.12"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "mypy>=1.14",
    "ruff>=0.9",
    "pytest-cov>=7.1.0",
]
