[project]
name = "axio-context-sqlite"
version = "0.1.0"
description = "SQLite-backed context store for Axio"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["llm", "agent", "ai", "sqlite", "context", "storage"]
dependencies = ["axio", "aiosqlite>=0.20"]

[project.urls]
Homepage = "https://github.com/axio-agent/monorepo"
Repository = "https://github.com/axio-agent/monorepo"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/axio_context_sqlite"]
sources = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "README.md"]

[tool.ruff]
line-length = 119
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
python_version = "3.12"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "mypy>=1.14",
    "ruff>=0.9",
    "pytest-cov>=7.1.0",
    "markdown-pytest>=0.6.0",
]

[tool.uv.sources]
axio = { workspace = true }
