[project]
name = "axio-transport-anthropic"
version = "0.1.0"
description = "Anthropic Claude transport for Axio"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = ["axio", "aiohttp>=3.11"]

[project.optional-dependencies]
tui = ["textual>=2.1.0"]

[project.entry-points."axio.transport"]
anthropic = "axio_transport_anthropic:AnthropicTransport"

[project.entry-points."axio.transport.settings"]
anthropic = "axio_transport_anthropic.tui:AnthropicSettingsScreen"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/axio_transport_anthropic"]
sources = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "README.md"]

[tool.ruff]
line-length = 119
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
python_version = "3.12"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "mypy>=1.14",
    "ruff>=0.9",
    "markdown-pytest>=0.6.0",
]
