[project]
name = "axio-transport-openai"
version = "0.2.3"
description = "OpenAI-compatible transport for Axio"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["llm", "agent", "ai", "openai", "transport", "openai-compatible"]
dependencies = ["axio", "aiohttp>=3.11"]

[project.optional-dependencies]
tui = ["textual>=2.1.0"]

[project.entry-points."axio.transport"]
openai = "axio_transport_openai:OpenAITransport"
nebius = "axio_transport_openai.nebius:NebiusTransport"
openrouter = "axio_transport_openai.openrouter:OpenRouterTransport"
openai-custom = "axio_transport_openai.custom:OpenAICompatibleTransport"

[project.entry-points."axio.transport.settings"]
openai = "axio_transport_openai.tui:OpenAISettingsScreen"
nebius = "axio_transport_openai.tui:NebiusSettingsScreen"
openrouter = "axio_transport_openai.tui:OpenRouterSettingsScreen"
openai-custom = "axio_transport_openai.tui:CustomHubScreen"


[project.urls]
Homepage = "https://github.com/axio-agent/axio-transport-openai"
Repository = "https://github.com/axio-agent/axio-transport-openai"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/axio_transport_openai"]
sources = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 119
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
python_version = "3.12"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "mypy>=1.14",
    "ruff>=0.9",
    "pytest-cov>=7.1.0",
    "textual>=2.1.0",
]

