[project]
name = "axio-tui-guards"
version = "0.2.3"
description = "Guards plugin for Axio TUI"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["llm", "agent", "ai", "tui", "textual", "guards", "terminal"]
dependencies = ["axio", "axio-tui"]

[project.entry-points."axio.guards"]
path = "axio_tui_guards.guards:PathGuard"
llm = "axio_tui_guards.guards:LLMGuard"


[project.urls]
Homepage = "https://github.com/axio-agent/axio-tui-guards"
Repository = "https://github.com/axio-agent/axio-tui-guards"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/axio_tui_guards"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "README.md"]

[tool.ruff]
line-length = 119
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
python_version = "3.12"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "mypy>=1.14",
    "ruff>=0.9",
    "pytest-cov>=7.1.0",
    "markdown-pytest>=0.6.0",
]

[[tool.mypy.overrides]]
module = ["axio_tui", "axio_tui.*", "axio_tools_local", "axio_tools_local.*"]
ignore_missing_imports = true
