[project]
name = "axio-tui"
version = "0.2.3"
description = "Textual TUI application for Axio"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["llm", "agent", "ai", "tui", "textual", "terminal", "chat"]
dependencies = [
    "axio",
    "axio-context-sqlite",
    "textual>=2.1.0",
    "textual-serve>=1.1",
    "argclass>=1.6",
]

[project.optional-dependencies]
anthropic = ["axio-transport-anthropic"]
openai = ["axio-transport-openai"]
codex = ["axio-transport-codex"]
local = ["axio-tools-local"]
mcp = ["axio-tools-mcp"]
rag = ["axio-tui-rag"]
guards = ["axio-tui-guards"]
all = [
    "axio-tui[anthropic,openai,codex,local,mcp,rag,guards]",
]

[project.entry-points."axio.tools"]
status_line = "axio_tui.tools:StatusLine"
confirm = "axio_tui.tools:Confirm"
subagent = "axio_tui.tools:SubAgent"
vision = "axio_tui.tools:VisionAnalyze"

[project.scripts]
axio = "axio_tui.__main__:main"


[project.urls]
Homepage = "https://github.com/axio-agent/axio-tui"
Repository = "https://github.com/axio-agent/axio-tui"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/axio_tui"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "README.md"]

[tool.ruff]
line-length = 119
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
python_version = "3.12"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "mypy>=1.14",
    "ruff>=0.9",
    "pytest-cov>=7.1.0",
    "markdown-pytest>=0.6.0",
]

[[tool.mypy.overrides]]
module = [
    "axio_transport_anthropic", "axio_transport_codex",
    "axio_tools_local", "axio_tools_local.*",
    "axio_tools_mcp", "axio_tools_mcp.*",
    "axio_tools_docker", "axio_tools_docker.*",
    "axio_tui_rag", "axio_tui_rag.*",
    "axio_tui_guards", "axio_tui_guards.*",
]
ignore_missing_imports = true
