[project]
name = "axio"
version = "0.2.3"
description = "Minimal, streaming-first, protocol-driven foundation for LLM-powered agents"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["llm", "agent", "ai", "async", "streaming", "pydantic", "protocol"]
dependencies = ["pydantic>=2"]


[project.urls]
Homepage = "https://github.com/axio-agent/axio"
Repository = "https://github.com/axio-agent/axio"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/axio"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "README.md"]

[tool.ruff]
line-length = 119
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
python_version = "3.12"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "mypy>=1.14",
    "ruff>=0.9",
    "pytest-cov>=7.1.0",
    "markdown-pytest>=0.6.0",
]
