[project]
name = "axio-docs"
version = "0.1.0"
description = "Documentation for the Axio agent framework"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "axio",
    "axio-context-sqlite",
]

[dependency-groups]
dev = [
    "markdown-pytest>=0.6.0",
]
docs = [
    "sphinx>=8",
    "furo>=2024.8",
    "myst-parser>=4",
    "sphinx-copybutton>=0.5",
    "sphinx-design>=0.6",
    "sphinxcontrib-mermaid>=1.0",
]

[tool.uv.sources]
axio = { workspace = true }
axio-context-sqlite = { workspace = true }
